--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,7 @@ skills:
   - Git
   - Local Network Configuration
   - Windows and Linux Network File Sharing and Backup
+  - ThreeJS (WebGL and basic Computer Graphics)
   - Arduino
   - LaTeX
   - Data Science with Python
