Fixed threejs name

--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ projects:
   - name: DaftChristmas
     url: https://ipepe.github.io/dc-design-hackathon/
     img_url: assets/images/projects/daftchristmas.jpg
-    description: Together with colleague from design we created this scene in ThreeJS during hackathon in DaftCode. Merry Christmas!
+    description: Together with colleague from design we created this scene in Three.js during hackathon in DaftCode. Merry Christmas!
   - name: Skrimarket by Skriware
     url: https://skrimarket.com/
     img_url: assets/images/projects/skrimarket.jpg
