--- a/_config.yml
+++ b/_config.yml
@@ -1,124 +1,28 @@
 # Customize page from here
-root_path: ipepe.pl
-title: Patryk Ptasiński's Official Website
-description: Welcome to Patryk Ptasiński official website! You can check brief history of my experience, my opinions or You can contact me.
+title: Eloshav.com
+description: Common links to find Eloshav on! Steam, Twitch, YouTube and Discord!
+url: "https://eloshav.com" # the base hostname & protocol for your site
+root_path: eloshav.com
 
-lead_name: Patryk Ptasiński
-lead_subtitle: Curiosity driven Fullstack Developer
-resume_download_link: "assets/resumes/Patryk_Ptasinski_Resume.pdf"
+medias:
+- title: YouTube
+  url: "https://www.youtube.com/user/Eloshav?sub_confirmation=1"
+  img: "/assets/images/youtube.png"
 
-form_email: homepage@ipepe.pl
-copyright_name: Patryk Ptasiński
+- title: Twitch.tv
+  img: "/assets/images/twitch.png"
+  url: "https://www.twitch.tv/eloshav"
 
-about_me: >
-  Curiosity-driven Full Stack Developer. Jack of all trades, master of none. Information Technology enthusiast since childhood. Published multiple packages in NPMjs, DockerHub and a few applications in Google Play Market. Rebuilt several two-stroke engines for sport/racing use. A dozen hours of performed live stream coding. 100k+ views on uploaded YouTube videos. Driving licence since the age of 16 with the result of 200’000+ kilometres driven to date. Hacktoberfest 2017 Participant. Cars and motorcycles enthusiast. Mobile games developer and Bitcoin and Blockchain user.
+- title: Discord
+  img: "/assets/images/discord.png"
+  url: "https://discordapp.com/invite/ecdTCyR"
 
-experiences:
-  - employer_name: Skriware
-    title: Senior Three.js/Ruby Developer
-    description: 'Responsible for creating a custom Three.js tool'
-    stack: 'Ruby on Rails, Three.js'
-    related: 'Wunderlist, 3D Modeling, Shaders, WebGL performance, Architecture'
-    dates: 2018 - Present
-  - employer_name: DaftCode.pl
-    title: Senior Ruby Developer
-    description: "Responsible for planning, estimating and distributing work in project, architecture and quality of code for medium Rails application related to 3D Printing. Created an online 3D models CAD editor."
-    stack: "Bootstrap, Three.js, Ruby on Rails, PostgreSQL, Redis and Elasticsearch."
-    related: "Kanbanery, Capistrano, Integration, AirBrake (Errbit), Monitoring and GitLab."
-    dates: 2017
-  - employer_name: In4mates.com
-    title: Lead Ruby Developer
-    description: "Technical lead developer in a big project related to the accounting. Managed team of 5 developers. Responsible for architecture, maintenance, deployment - whole system development life cycle."
-    stack: "Bootstrap, EmberJS, Bower, NPM, Ruby on Rails, PostgreSQL and Docker"
-    related: "Jenkins, Redmine, Capistrano, Vagrant, Integration, Monitoring and GitLab."
-    dates: 2015 - 2017
-  - employer_name: Gaz-System.pl
-    title: Systems Administrator and T2 Helpdesk
-    description: "Performed second level on-site Helpdesk. Administrator of packages, applications and compliance for SCCM (2500 workstations) and on-site Aactive Directory managment (600 users and computers)."
-    related: "DevOps, Zabbix, PowerShell, VBScript, Acronis, Hardware Inventory, SLA, Microsoft Deployment Toolkit."
-    dates: 2012 - 2014
-  - employer_name: DigitalVirgo.pl
-    title: 24x7 Helpline Support
-    description: "Responsible for supporting Paid SMS Gateway and part-time Helpdesk Support."
-    related: "DevOps, SLA, Linux, Nagios, Scripting, Hardware Inventory and Software Lincesing."
-    dates: 2012
-  - employer_name: Synergia-Polska.pl
-    title: Outsourced Systems Administrator and Helpdesk
-    description: "Responsible for the infrastructure of multiple client companies. Developed multiple small tools and applications in Java and C-Sharp."
-    related: "SLA, Monitoring, VNC, DevOps, Hardware and Software Technical Support."
-    dates: 2011
-  - employer_name: Lacan.com.pl
-    title: Junior OpenERP Developer and Helpdesk Support
-    description: "Created multiple OpenERP modules. Performed duties as Secondary Systems Administrator and resolved Helpdesk tickets."
-    related: "SLA, DevOps, Spiceworks, Monitoring, VNC, Python and MySQL."
-    dates: 2010
+- title: Steam
+  url: "https://steamcommunity.com/id/eloshav"
+  img: "/assets/images/steam.png"
 
-educations:
-  - school_name: Polish-Japanese Academy Of Information Technology
-    dates: 2012 - 2017
-    url: http://www.pja.edu.pl/en/
-    img_url: assets/images/education/pjatk.png
-    title: Engineer degree in The Faculty of Information Technology
-    speciality: Networks of Mobile Devices
-    thesis: Urban navigation based on WIFI location data
-    advisor: dr. inż. Michał Tomaszewski
-    related: Ruby On Rails, Big data, WIFI, Android, Geolocation, PostGIS
-  - school_name: Academic High School under supervision of Polish-Japanese Academy Of Information Technology
-    dates: 2008 - 2011
-    img_url: assets/images/education/alo.png
-    url: http://liceum.pja.edu.pl/
-    title: Secondary Education
-    speciality: Information Technology
-    related: Java, SQL, UML
 
-projects:
-  - name: 3Dless.com
-    url: https://3dless.com/
-    img_url: assets/images/projects/3dless.jpg
-    description: In my spare time of working with Three.js, I created a tool for simplifying 3d models by reducing vertices in mesh.
-  - name: DaftChristmas
-    url: https://ipepe.github.io/dc-design-hackathon/
-    img_url: assets/images/projects/daftchristmas.jpg
-    description: Together with colleague from design we created this scene in Three.js during hackathon in DaftCode. Merry Christmas!
-  - name: Skrimarket by Skriware
-    url: https://skrimarket.com/
-    img_url: assets/images/projects/skrimarket.jpg
-    description: Printing and sharing amazing 3D designs. Created CAD in browser for building 3D models to print.
-  - name: TaxOrder
-    url: http://taxorder.pl/
-    img_url: assets/images/projects/taxorder.jpg
-    description: Very big platform to manage accounting office. A web application that helps customers create invoices, manage employees and calculate taxes under supervision of accountants.
-  - name: Alphatrix
-    url: https://play.google.com/store/apps/details?id=pl.ipepe.android.alphatrix
-    img_url: assets/images/projects/alphatrix.jpg
-    description: Created over few weekends. This mind breaking game is quite addictive, although short... Maybe I will create a continuation for it one day?
-  - name: Foosball Open Ranking
-    url: https://github.com/ipepe/foosball-open-ranking
-    img_url: assets/images/projects/foosball.jpg
-    description: In our company there was always a doubt who is the best in Foosball. So I created this ranking website to reveal the best players!
 
-skills:
-  - Ruby on Rails
-  - PostgreSQL
-  - Android Development
-  - Web Crawling
-  - jQuery vs Vanilla JS
-  - Bootstrap CSS
-  - "Linux - Debian Family"
-  - Git
-  - Local Network Configuration
-  - Windows and Linux Network File Sharing and Backup
-  - Three.js (WebGL and Computer Graphics)
-  - Arduino
-  - LaTeX
-  - Data Science with Python
-  - iOS Development
-
-social_buttons:
-  - iconkey: github
-    url: https://github.com/ipepe
-
-#    Jekyll Config & Plugins     #
 markdown: kramdown
 permalink: pretty
 gems:
