--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ medias:
   img: "assets/images/twitch.png"
 
 - title: Discord
-  url: "https://discordapp.com/invite/ecdTCyR"
+  url: "https://discord.gg/ecdTCyR"
   img: "assets/images/discord.png"
 
 - title: Steam
